--- a/style-css/cards-page.css
+++ b/style-css/cards-page.css
@@ -39,7 +39,7 @@ article {
 
 .title-card {
     text-align: center;
-    font-size: 35px;
+    font-size: 1.5vw;
     text-transform: uppercase;
     font-weight: bolder;
     color: white;
@@ -47,15 +47,15 @@ article {
 
 .data-card {
     text-align: center;
-    margin-top: 10px;
-    font-size: 20px;
+    margin-top: 2%;
+    font-size: 1vw;
     color: white;
 }
 
 .views-card {
     text-align: center;
     margin-top: 10px;
-    font-size: 20px;
+    font-size: 1vw;
     margin-bottom: 40px;
     color: white;
 }
@@ -70,8 +70,8 @@ article {
 
 
 .text-card {
-    margin: 40px 100px;
-    font-size: 20px;
+    margin: 2% 5%;
+    font-size: 1vw;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     color: white;
@@ -85,4 +85,11 @@ article {
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 20px;
+}
+
+@media screen and (max-width: 1024) {
+    
+    .title-card h1 {
+        font-size: 10vw;
+    }
 }
