--- a/style-css/header-nav.css
+++ b/style-css/header-nav.css
@@ -9,14 +9,13 @@ label.name {
     color: white;
     font-size: 50px;
     line-height: 80px;
-    padding: 0 100px;
+    padding: 0 5%;
     font-weight: bold;
 }
 
 nav ul {
     float: right;
     margin-right: 20px;
-
 }
 
 nav ul li {
@@ -36,12 +35,4 @@ nav ul li a {
 a.active,a:hover {
     background-color: rgba(255, 255, 255, 0.229);
     transition: .5s;
-}
-
-.checkbtn {
-    font-size: 30px;
-    color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
 }
