--- a/assets/style-css/base.css
+++ b/assets/style-css/base.css
@@ -5,9 +5,14 @@
     list-style: none;
     text-decoration: none;
 }
+
+html {
+    height: 100vh;
+}
+
 body{
     background-size: cover;
-    background-image: url(assets/fundo.jpg);
+    background-image: url(../../assets/img/fundo.jpg);
     font-family: 'Montserrat', sans-serif;
 }
 
