--- a/assets/style-css/cards-page.css
+++ b/assets/style-css/cards-page.css
@@ -7,7 +7,7 @@
 
 body {
     background-size: cover;
-    background-image: url(assets/fundo.jpg);
+    background-image: url(../../assets/img/fundo.jpg);
     font-family: 'Montserrat', sans-serif;
 }
 
