Alterações em media querie na pagina principal

--- a/assets/style-css/card-body.css
+++ b/assets/style-css/card-body.css
@@ -1,9 +1,11 @@
 .categorie {
     margin-bottom: 10px;
+    font-size: 1vw;
 }
 
 .data {
     color: rgb(25, 10, 107);
+    font-size: 1vw;
 }
 
 .subtitle {
