--- a/assets/style-css/cards-page.css
+++ b/assets/style-css/cards-page.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+}
+
+html {
+    height: 100vh;
 }
 
 body {
@@ -20,7 +25,7 @@ nav {
 
 .home {
     line-height: 80px;
-    font-size: 45px;
+    font-size: 2vw;
     color: white;
     font-weight: bolder;
 }
@@ -47,7 +52,7 @@ article {
 
 .data-card {
     text-align: center;
-    margin-top: 2%;
+    margin-top: 20px;
     font-size: 1vw;
     color: white;
 }
@@ -56,13 +61,13 @@ article {
     text-align: center;
     margin-top: 10px;
     font-size: 1vw;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     color: white;
 }
 
 .img-card img{
     display: flex;
-    width: 40%;
+    width: 35%;
     margin-left: auto;
     margin-right: auto;
     background-color: black;
@@ -70,7 +75,8 @@ article {
 
 
 .text-card {
-    margin: 2% 5%;
+    margin: 2% 2%;
+    padding: 30px;
     font-size: 1vw;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
@@ -78,7 +84,7 @@ article {
 }
 
 .text-container {
-    background-color: rgba(0, 0, 0, 0.511);
+    background-color: rgba(0, 0, 0, 0.651);
     width: 95%;
     border-radius: 10px;
     margin-top: 25px;
@@ -87,9 +93,133 @@ article {
     padding-bottom: 20px;
 }
 
-@media screen and (max-width: 1024) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
+
+    .home {
+        font-size: 8vw;
+        line-height: 60px;
+    }
+
+    nav {
+        height: 60px;
+        width: 100%;
+    }
+
+    .title-card {
+        font-size: 3vw;
+        margin: 0 20px;
+    }
+
+    .data-card {
+        margin-top: 10px;
+        font-size: 3vw;
+    }
     
-    .title-card h1 {
-        font-size: 10vw;
+    .views-card {
+        margin-top: 5px;
+        font-size: 3vw;
+        margin-bottom: 10px;
+    }
+    
+    .img-card img{
+        width: 40%;
+    }
+    
+    .text-card {
+        padding: 15px;
+        font-size: 2vw;
+    }
+
+    .text-container {
+        padding-bottom: 10px;
+    }
+
+    article {
+        margin-bottom: 5px;
+        padding-bottom: 15px;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+
+    .home {
+        font-size: 6vw;
+        line-height: 60px;
+    }
+
+    nav {
+        height: 60px;
+        width: 100%;
+    }
+
+    .title-card {
+        font-size: 2.5vw;
+        margin: 0 20px;
+    }
+
+    .data-card {
+        margin-top: 10px;
+        font-size: 2.5vw;
+    }
+    
+    .views-card {
+        margin-top: 5px;
+        font-size: 2.5vw;
+        margin-bottom: 10px;
+    }
+    
+    .img-card img{
+        width: 40%;
+    }
+    
+    .text-card {
+        padding: 15px;
+        font-size: 2vw;
+    }
+
+    .text-container {
+        padding-bottom: 10px;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+
+    .home {
+        font-size: 4vw;
+        line-height: 70px;
+    }
+
+    nav {
+        height: 70px;
+        width: 100%;
+    }
+
+    .title-card {
+        font-size: 2.5vw;
+        margin: 0 20px;
+    }
+
+    .data-card {
+        margin-top: 10px;
+        font-size: 2.2vw;
+    }
+    
+    .views-card {
+        margin-top: 5px;
+        font-size: 2.2vw;
+        margin-bottom: 20px;
+    }
+    
+    .img-card img{
+        width: 40%;
+    }
+    
+    .text-card {
+        padding: 15px;
+        font-size: 1.7vw;
+    }
+
+    .text-container {
+        padding-bottom: 10px;
     }
 }
